mob ui: bring up to speed with possible friends changes; manual verif

--- a/clients/addon/data/addon/index.html
+++ b/clients/addon/data/addon/index.html
@@ -281,9 +281,10 @@
       <a class="phonebookItem hbox" data-classimpl="peepPhonebook"
          href="#askFriend">
         <div class="peepInfo">
-          <img class="peepInfoPic" data-bind="pic" data-attr="src"
+          <img class="peepInfoPic" data-bind="peep.pic" data-attr="src"
                src="i/face2.png" />
-          <span data-bind="selfPoco.displayName" class="peepInfoName"></span>
+          <span data-bind="peep.selfPoco.displayName" class="peepInfoName">
+          </span>
         </div>
       </a>
 
