gravatars, private peep display improvements, resiliency
- BrowserID changed the VEP assertion format which broke our
  determination of e-mails from the assertion and also killed the
  gravatars as a side-effect.  Now resolved.
- Update/create private conversations in an event driven fashion so when
  the person shows up in the peep list when their contact gets added the
  private conversation will also be immediately created.  This has been
  made more resilient, but it's still a hack.
- Wrap query notification event handlers in try blocks.  The granularity
  is currently quite large and not on a per-invocation basis.  Because
  query notifications are going to tend to be highly correlated and
  change notifications are pretty tightly scoped, this should not pose
  a major problem.

--- a/clients/addon/data/addon/index.html
+++ b/clients/addon/data/addon/index.html
@@ -429,7 +429,7 @@
       </a>
 
       <!-- peepPrivate: Identities the peep, provides most recent message -->
-      <a class="private unread hbox" data-classimpl="peepPrivate"
+      <a class="private hbox" data-classimpl="peepPrivate"
          href="#privateConv">
           <div>
               <div class="avatar">
